# robocurate

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  BLUEPRINT.md  EXTENDING.md  GETTING_STARTED.md  ROADMAP.md
examples/: benchmark_identity.py  custom_signal.py  make_demo_dataset.py
experiments/: README.md  blindspot_matrix.py  corruption_recovery.py  heldout_validation.py  lerobot_v3_demo.py  maniskill_experiment_modal.py  maniskill_modal.py  modal_app.py  nvidia_icd.json  nvidia_layers.json  plot_validation_results.py  robomimic_bc_validation_modal.py  robomimic_scorecard.py
src/robocurate/: __init__.py  cli.py  corruptions.py  curator.py  dataset.py  examples.py  health.py  hub.py  manifest.py  metadata.py  profile.py  recipe.py  scorecard.py  torch_utils.py  trajectory.py  video.py  viz.py
src/robocurate/adapters/: __init__.py  base.py  hdf5.py  lerobot.py  lerobot_v3.py  lerobot_v3_writer.py  maniskill_demos.py  memory.py  rlds.py  robomimic.py  zarr.py
src/robocurate/benchmark/: __init__.py  leaderboard.py  runner.py  spec.py  submission.py
src/robocurate/experiment/: __init__.py  conditions.py  config.py  heldout.py  maniskill.py  policies.py  policy.py  report.py  runner.py  stats.py  synthetic.py
src/robocurate/signals/: __init__.py  action_noise.py  base.py  contract.py  cupid.py  demo_score.py  image_blur.py  jerk.py  path_efficiency.py  redundancy.py  registry.py  sim_validity.py  spectral_smoothness.py  structural_validity.py  visual_diversity.py  visual_stall.py
tests/: synthetic.py  test_action_noise_signal.py  test_adapters.py  test_bc_policy.py  test_benchmark_formats.py  test_benchmark_run.py  test_blindspot_matrix.py  test_cli_and_api.py  test_cli_compare.py  test_cli_explain.py  test_cli_inspect.py  test_cli_list_signals.py  test_cli_rank.py  test_cli_report_diff.py  test_cli_v3.py  test_cli_verify.py  test_corruptions.py  test_cupid_signal.py  test_curator.py  test_curator_coverage.py  test_curator_modes.py  test_dataset_hub.py  test_demo_score_signal.py  test_determinism.py  test_episode_lists.py  test_experiment_config.py  test_experiment_fakes.py  test_experiment_runner.py  test_hdf5_reader.py  test_health.py  test_heldout.py  test_hub.py  test_image_signals.py  test_image_signals_registry.py  test_jerk_signal.py  test_known_answer_downstream.py  test_lerobot_v3_image.py  test_lerobot_v3_reader.py  test_lerobot_v3_writer.py  test_maniskill_demos.py  (+23 more)
